Add Hobbies page.

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -37,7 +37,7 @@ body {
     justify-content: center;
 }
 
-.nav-logo img {
+.nav-logo, img {
     width: 200px;
 }
 
@@ -56,13 +56,13 @@ body {
     margin-bottom: 50px;
 }
 
-.profile h1 {
+.profile, h1 {
         font-size: 50px;
         font-weight: 700;
         color: white;
 }
 
-.profile img {
+.profile, img {
         border-radius: 50%;
         max-width: 100%;
         max-height: 100%;
@@ -114,12 +114,12 @@ body {
     margin: 0 auto;
 }
 
-.photos img {
+.photos, img {
     height: 200px;
     width: auto;
 }
 
-.about-container {
+.about-container, .hobby-container {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
@@ -127,7 +127,7 @@ body {
     padding: 2rem;
 }
 
-.about {
+.about, .hobby {
     flex: 1 1 300px;
     max-width: 500px;
     background-color: #f8f8f8;
