--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    {% import 'macro.jinja' as ml %}
     <header class="nav-bar">
         <div class="nav-content">
             <a href="/">
@@ -33,6 +34,7 @@
                 </div>
             </a>
         </div>
+        {{ml.menu()}}
     </header>
 
     <main>
