--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,11 @@
 
     <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
     <link rel='icon' href='./static/img/favicon.ico' type='image/x-icon' />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+   
     <title>{% block title %}Portfolio{% endblock %}</title>
 </head>
 
@@ -32,12 +37,21 @@
 
     <main>
         {% block content %}
-        <div class="photos-wrapper">
+        <section class="photos-wrapper">
             <div class="photos">
                 {% for photo in photos %}
                 <img src="{{ url_for('static', filename='img/' + photo) }}" alt="Photo {{ loop.index }}" />
                 {% endfor %}
             </div>
+        </section>
+        <div id="map">
+            <!-- Inject locations into global JS variable -->
+            <script>
+                window.MAP_LOCATIONS = {{ locations | tojson }};
+            </script>
+
+            <!-- Now load your separated JS file -->
+            <script src="{{ url_for('static', filename='map.js') }}"></script>
         </div>
         {% endblock %}
     </main>
