--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -119,6 +119,16 @@ body {
     width: auto;
 }
 
+.map-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #map {
-    height: 300px;
+    height: 25vw;
+    width: 40vw;
+    min-height: 250px;
+    min-width: 400px;
 }
